--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ h2 {
     height: 12rem;
     width: 12rem;
   }
+  p{
+    color: whitesmoke;
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 360px) {
