added 3D effects in box and button

--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 * {
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
+
+:root {
+  --boxshadow: 0 0.5rem 0.625rem 0 rgba(53, 49, 49, 0.2),
+    0 -0.125rem 0.75rem rgba(110, 15, 155, 1) inset,
+    0 0.375rem 0.125rem rgba(255, 255, 255, 0.4) inset,
+    0 0.125rem 0.25rem 0 rgba(180, 70, 207, 1) inset;
+}
+
 body {
   color: white;
   text-align: center;
@@ -9,9 +19,11 @@ body {
 
 h1 {
   font-size: 3rem;
+  margin: 1rem;
 }
 h2 {
   font-size: 2vw;
+  margin: 1rem;
 }
 .gamePad {
   display: flex;
@@ -26,22 +38,57 @@ h2 {
 }
 #red {
   background-color: red;
-  box-shadow: 0 0 4px black;
+  box-shadow: var(--boxshadow);
 }
 #green {
   background-color: green;
-  box-shadow: 0 0 4px black;
-  backdrop-filter: blur(20px);
+  box-shadow: var(--boxshadow);
 }
 #blue {
   background-color: blue;
-  box-shadow: 0 0 4px black;
+  box-shadow: var(--boxshadow);
 }
 #orange {
   background-color: orange;
-  box-shadow: 0 0 4px black;
+  box-shadow: var(--boxshadow);
 }
 
+.start {
+  padding: 0.25rem 2rem;
+  margin: 1rem;
+  color: white;
+  font-size: 1.5rem;
+  background: linear-gradient(to right, rgb(255, 0, 255), rgb(0, 0, 255));
+  border-radius: 3rem;
+  border: 1px solid white;
+  cursor: pointer;
+  background-image: linear-gradient(180deg, #ff89d6 0%, #c01f9e 100%);
+  box-shadow: 0 0.5rem 0.625rem 0 rgba(53, 49, 49, 0.2),
+    0 -0.125rem 0.75rem rgba(110, 15, 155, 1) inset,
+    0 0.375rem 0.125rem rgba(255, 255, 255, 0.4) inset,
+    0 0.125rem 0.25rem 0 rgba(180, 70, 207, 1) inset;
+}
+
+/* ? for Big size screen like computer and laptop.  */
+@media (min-width: 600px) and (max-width: 1300px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+  }
+  .box {
+    height: 12rem;
+    width: 12rem;
+  }
+  p {
+    color: whitesmoke;
+    font-size: 1rem;
+  }
+}
+
+/* ? for Medium size screen like phome and tablet.  */
 @media (min-width: 360px) and (max-width: 600px) {
   h1 {
     font-size: 2rem;
@@ -49,6 +96,7 @@ h2 {
   h2 {
     font-size: 1.5rem;
     margin-bottom: 4rem;
+    opacity: 0;
   }
   .box {
     height: 10rem;
@@ -56,24 +104,7 @@ h2 {
   }
 }
 
-@media (min-width: 600px) and (max-width: 1300px) {
-  h1 {
-    font-size: 2rem;
-  }
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 4rem;
-  }
-  .box {
-    height: 12rem;
-    width: 12rem;
-  }
-  p{
-    color: whitesmoke;
-    font-size: 1rem;
-  }
-}
-
+/* ? for very small size screen like small mobile and watch.  */
 @media (max-width: 360px) {
   .box {
     height: 35vw;
@@ -87,5 +118,7 @@ h2 {
   h2 {
     font-size: 0.7rem;
     margin-bottom: 4rem;
+    opacity: 0;
+
   }
 }
