adding some interactive part in the page

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ h2 {
   h2 {
     font-size: 1.5rem;
     margin-bottom: 4rem;
-    opacity: 0;
   }
   .box {
     height: 10rem;
@@ -118,7 +117,6 @@ h2 {
   h2 {
     font-size: 0.7rem;
     margin-bottom: 4rem;
-    opacity: 0;
 
   }
 }
@@ -129,7 +127,6 @@ h2 {
     height: 26vh;
     width: 26vh;
     border-radius: 1rem;
-    /* margin: 0.3rem; */
   }
   h1 {
     font-size: 1rem;
@@ -139,11 +136,17 @@ h2 {
     font-size: 0.7rem;
     margin: 1rem 1rem 0.7rem;
     margin-top: 0.5rem;
-    opacity: 0;
 
   }
   .start{
     padding: 0.5rem 1rem;
     font-size: 1rem;
   }
+}
+
+
+
+/* utility class for js  */
+blink{
+  background-color: white;
 }
